@@ -1,1 +1,2 @@
-<*>:camlp4of,use_camlp4
+<*>:camlp4of,use_camlp4_full
+<optcomp*.*>: use_dynlink
