@@ -1,1 +1,1 @@
-<*>:camlp4oof,use_camlp4,use_camlp4_full,use_optcomp
+<*>:camlp4oof,use_camlp4,use_camlp4_full,use_pa_optcomp
